test/manifests-2/services.yaml
#react
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      name: port1
      port: 80
      targetPort: 3000
    - protocol: TCP
      name: port2
      port: 8080
      targetPort: 3000
---
#flask
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
